--- a/index.html
+++ b/index.html
@@ -1,74 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/Suggestion_Box.css">
+    <link rel="stylesheet" type="text/css" href="css/Imitation_FBSB.css">
     <script src="js/jquery-1.11.2.min.js"></script>
+    <script src="js/Imitation_FBSB.js"></script>
 	<script>
-		var pagecardw=145;
-		var pagecardn=7;
-		var margin=9;
-		var covered=112;
-		var boxw=pagecardw*pagecardn+margin*(pagecardn-1)-covered*2; //845
-		var singlemove=(pagecardw+margin)*(pagecardn-2);
+	$(function(){
 
-		
-		$(document).ready(function(){	
-			
-			$('.box').width(boxw);
-			$('li').width(pagecardw);
-			$('img').width(pagecardw);
-			$('ul').css({left:-covered});
-
-			var listn = $('li').length;
-			var boundary = (pagecardw+margin)*(listn-2)-singlemove;
-			
-			$('.slide-wrap').hover(function() {
-				$('.shift').addClass('shift-active');
-				$('i').addClass('i-active');
-			}, function() {
-				$('.shift').removeClass('shift-active');
-				$('i').removeClass('i-active');
-			});
-
-			$('.right').hover(function() {
-				$('.slide').addClass('slide-active-r');
-			}, function() {
-				$('.slide').removeClass('slide-active-r');
-			});
-
-			$('.left').hover(function() {
-				$('.slide').addClass('slide-active-l');
-			}, function() {
-				$('.slide').removeClass('slide-active-l');
-			});
-
-			$('.shift').hover(function() {
-				$('i').addClass('i-active-move');
-			}, function() {
-				$('i').removeClass('i-active-move');
-			});
-
-			var movement=0;
-
-			$('.right').click(function(event) {
-				if(Math.abs(movement) < boundary)
-					movement-=singlemove;
-				$('ul').hover().css('transform','translateX('+movement+'px)');
-			});
-
-			$('.left').click(function(event) {
-				if(movement < 0)
-					movement+=singlemove;
-				$('ul').hover().css('transform','translateX('+movement+'px)');
-			});
+		$.getJSON("JSON/data.js",function (result){
+			var setting = {
+				subject:'Movie',
+				cardw : 145,	//page card's width .
+				cardh : 217,
+				cardn : 5,		//the number of visible page card .
+				margin : 9,		//margin between cards .
+				JSON :result
+			};
+			$('#movie').FBSB(setting);
 		});
-	</script>
-	<title>Imitation_FB_Suggestion_Box</title>
-</head>
 
+		$.getJSON("JSON/data.js",function (result){
+			var setting = {
+				subject:'NBA',
+				cardw : 145,	//page card's width .
+				cardh : 145,
+				cardn : 7,		//the number of visible page card .
+				margin : 9,		//margin between cards .
+				JSON :result
+			};
+			$('#nba').FBSB(setting);
+		});
+	});
+	</script>
+	<title>Imitation_FBSB</title>
+</head>
+	
 <body>
-	<div class ='box'>
-		<h3>NBA</h3>
+	<div class ='box' id="nba">
+		<h3></h3>
 		<div class='tri'></div>
 		<div class ='slide-wrap'>
 			<div class='border'>
@@ -80,120 +49,27 @@
 					<ul>
 						<li>
 						</li>
-						<li>	
-							<img src="img/NBA/Cavaliers.jpg">
-							<div class='title'>Cavaliers
-								<br>
-								<span>Cleveland</span>
-							</div>
+						<li>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class ='box' id="movie">
+		<h3></h3>
+		<div class='tri'></div>
+		<div class ='slide-wrap'>
+			<div class='border'>
+				<div class='slide'>
+					<div class='shift right'></div>
+					<i class='shift right'></i>
+					<div class='shift left'></div>
+					<i class ='shift left'></i>
+					<ul>
+						<li>
 						</li>
 						<li>
-							<img src="img/NBA/Bulls.jpg">
-							<div class='title'>Bulls
-								<br>
-								<span>Chicago</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Warriors.jpg">
-							<div class='title'>Warriors
-								<br>
-								<span>Golden State</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Heat.jpg">
-							<div class='title'>Heat
-								<br>
-								<span>Miami</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Thunder.jpg">
-							<div class='title'>Thunder
-								<br>
-								<span>Oklahoma City</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Spurs.jpg">
-							<div class='title'>Spurs
-								<br>
-								<span>San Antonio</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Rockets.jpg">
-							<div class='title'>Rockets
-								<br>
-								<span>Houston</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Lakers.jpg">
-							<div class='title'>Lakers
-								<br>
-								<span>Los Angeles</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Bucks.jpg">Bucks
-							<div class='title'>Bucks
-								<br>
-								<span>Milwaukee</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Celtics.jpg">
-							<div class='title'>Celtics
-								<br>
-								<span>Boston</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Hornets.jpg">
-							<div class='title'>Hornets
-								<br>
-								<span>Charlotte</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Pistons.jpg">
-							<div class='title'>Pistons
-								<br>
-								<span>Detroit</span>
-							</div>
-						</li>
-						<li>
-							<img src="img/NBA/Mavericks.jpg">
-							<div class='title'>Mavericks
-								<br>
-								<span>Dallas</span>
-							</div>	
-						</li>
-						<li>
-							<img src="img/NBA/Hawks.jpg">
-							<div class='title'>Hawks
-								<br>
-								<span>Atlanta</span>
-							</div>	
-						</li>
-						<li>
-							<img src="img/NBA/Grizzlies.jpg">
-							<div class='title'>Grizzlies
-								<br>
-								<span>Memphis</span>
-							</div>	
-						</li>
-						<li>
-							<img src="img/NBA/Raptors.jpg">
-							<div class='title'>Raptors
-								<br>
-								<span>Toronto</span>
-							</div>	
-						</li>
-						<li>
-							<div></div>
 						</li>
 					</ul>
 				</div>
@@ -201,4 +77,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
