--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
 <body>
 	<pre class='codeblock'>
   
-  $('#nba').FBSB({
+  $('#nba').slider({
       subject : 'NBA',
       JSON : result
   });
 
-  // If you don't specify the initial 
-  // setting ,we have default
-
+  // Defaut setting for properies that weren't given.
+  
   {	
       cardw : 145,
       cardh : 145,
@@ -83,7 +82,7 @@
 	</div>
 	<pre class='codeblock'>
 
-   $('#movie').FBSB({
+   $('#movie').slider({
       subject : 'Movie',
       cardw : 145,
       cardh : 217,
@@ -115,7 +114,7 @@
 	</div>
 	<pre class='codeblock'>
 
-   $('#movie1').FBSB({
+   $('#movie1').slider({
       subject : 'Movie',
       cardw : 145,
       cardh : 217,
