--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		$.getJSON("JSON/data.js",function (result){
 			var setting = {
 				subject:'Movie',
-				cardw : 145,	//page card's width .
+				cardw : 145,	// Card width .
 				cardh : 217,
-				cardn : 5,		//the number of visible page card .
-				margin : 18,		//margin between cards .
+				cardn : 5,	// The number of visible cards .
+				margin : 18,	// Margin between cards .
 				JSON :result
 			};
 			$('#movie').FBSB(setting);
@@ -29,10 +29,10 @@
 		$.getJSON("JSON/data.js",function (result){
 			var setting = {
 				subject:'Movie',
-				cardw : 145,	//page card's width .
+				cardw : 145,	// Card width .
 				cardh : 217,
-				cardn : 3,		//the number of visible page card .
-				margin : 15,		//margin between cards .
+				cardn : 3,	// The number of visible cards .
+				margin : 15,	// Margin between cards .
 				JSON :result
 			};
 			$('#movie1').FBSB(setting);
@@ -118,7 +118,7 @@
       subject : 'Movie',
       cardw : 145,
       cardh : 217,
-      cardn : 3, // at least three
+      cardn : 3, // At least three
       margin : 15,  
       JSON : result
     });
