--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		});
 	});
 	</script>
-	<title>Imitation_FBSB</title>
+	<title>Imitation of FaceBook UI Component</title>
 </head>
 	
 <body>
@@ -86,8 +86,8 @@
       subject : 'Movie',
       cardw : 145,
       cardh : 217,
-      cardn : 5,    // adjust
-      margin : 18,  // adjust
+      cardn : 5,    
+      margin : 18,
       JSON : result
     });
 	</pre>
